--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: puppet-app
     env: node
     buildCommand: |
-      cd frontend && npm install && npm run build && cd ../backend && npm install
-    startCommand: cd backend && npm start
+      cd frontend && npm install && npm run build && \
+      cd ../backend && npm install && \
+      npm run build
+    startCommand: cd backend && node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
