--- a/render.yaml
+++ b/render.yaml
@@ -1,40 +1,15 @@
 services:
   - type: web
-    name: puppet-app
+    name: puppet
     env: node
     buildCommand: |
-      # Install Chrome for Puppeteer
-      apt-get update && apt-get install -y \
-        chromium \
-        chromium-sandbox \
-        fonts-ipafont-gothic \
-        fonts-wqy-zenhei \
-        fonts-thai-tlwg \
-        fonts-kacst \
-        fonts-freefont-ttf \
-        libxss1 \
-        --no-install-recommends
-      # Build frontend
-      cd frontend
       npm install
       npm run build
-      cd ..
-      # Build backend
-      cd backend
-      npm install
-      npm run build
-      cd ..
-    startCommand: |
-      cd backend
-      node dist/index.js
+      apt-get update
+      apt-get install -y chromium
+    startCommand: npm start
     envVars:
-      - key: NODE_ENV
-        value: production
-      - key: PORT
-        value: 8080
       - key: PUPPETEER_EXECUTABLE_PATH
         value: /usr/bin/chromium
-    disk:
-      name: uploads
-      mountPath: /opt/render/project/src/backend/uploads
-      sizeGB: 1 
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: "true" 
