--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,7 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
     "pdf.js-extract": "^0.2.1",
-    "puppeteer": "^24.12.1",
+    "puppeteer": "19.7.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
