--- a/render.yaml
+++ b/render.yaml
@@ -3,13 +3,26 @@ services:
     name: puppet
     env: node
     buildCommand: |
+      # Install dependencies required for Chrome
+      apt-get update
+      apt-get install -y \
+        chromium \
+        chromium-sandbox \
+        fonts-ipafont-gothic \
+        fonts-wqy-zenhei \
+        fonts-thai-tlwg \
+        fonts-kacst \
+        fonts-freefont-ttf \
+        libxss1 \
+        --no-install-recommends
+      # Install and build application
       npm install
       npm run build
-      apt-get update
-      apt-get install -y chromium
     startCommand: npm start
     envVars:
       - key: PUPPETEER_EXECUTABLE_PATH
         value: /usr/bin/chromium
       - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: "true" 
+        value: "true"
+      - key: NODE_ENV
+        value: production 
