--- a/render.yaml
+++ b/render.yaml
@@ -3,26 +3,14 @@ services:
     name: puppet
     env: node
     buildCommand: |
-      # Install dependencies required for Chrome
+      # Install Chromium and its dependencies
       apt-get update
-      apt-get install -y \
-        chromium \
-        chromium-sandbox \
-        fonts-ipafont-gothic \
-        fonts-wqy-zenhei \
-        fonts-thai-tlwg \
-        fonts-kacst \
-        fonts-freefont-ttf \
-        libxss1 \
-        --no-install-recommends
-      # Install and build application
+      apt-get install -y chromium chromium-sandbox
       npm install
       npm run build
     startCommand: npm start
     envVars:
       - key: PUPPETEER_EXECUTABLE_PATH
         value: /usr/bin/chromium
-      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: "true"
       - key: NODE_ENV
         value: production 
