--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,38 @@ services:
     buildCommand: |
       # Install Chromium and its dependencies
       apt-get update
-      apt-get install -y chromium chromium-sandbox
+      apt-get install -y \
+        chromium-browser \
+        chromium-browser-l10n \
+        fonts-liberation \
+        fonts-roboto \
+        libasound2 \
+        libatk-bridge2.0-0 \
+        libatk1.0-0 \
+        libatspi2.0-0 \
+        libcairo2 \
+        libcups2 \
+        libdbus-1-3 \
+        libdrm2 \
+        libgbm1 \
+        libglib2.0-0 \
+        libnspr4 \
+        libnss3 \
+        libpango-1.0-0 \
+        libx11-6 \
+        libxcb1 \
+        libxcomposite1 \
+        libxdamage1 \
+        libxext6 \
+        libxfixes3 \
+        libxrandr2 \
+        xdg-utils \
+        --no-install-recommends
       npm install
       npm run build
     startCommand: npm start
     envVars:
       - key: PUPPETEER_EXECUTABLE_PATH
-        value: /usr/bin/chromium
+        value: /usr/bin/chromium-browser
       - key: NODE_ENV
         value: production 
