--- a/render.yaml
+++ b/render.yaml
@@ -3,31 +3,29 @@ services:
     name: puppet
     env: node
     buildCommand: |
-      # Install Chromium and its dependencies
+      # Add Google Chrome repository and install Chrome
+      apt-get update
+      apt-get install -y wget gnupg
+      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
       apt-get update
       apt-get install -y \
-        chromium-browser \
-        chromium-browser-l10n \
+        google-chrome-stable \
         fonts-liberation \
-        fonts-roboto \
         libasound2 \
         libatk-bridge2.0-0 \
         libatk1.0-0 \
         libatspi2.0-0 \
-        libcairo2 \
         libcups2 \
         libdbus-1-3 \
         libdrm2 \
         libgbm1 \
-        libglib2.0-0 \
+        libgtk-3-0 \
         libnspr4 \
         libnss3 \
-        libpango-1.0-0 \
-        libx11-6 \
-        libxcb1 \
+        libx11-xcb1 \
         libxcomposite1 \
         libxdamage1 \
-        libxext6 \
         libxfixes3 \
         libxrandr2 \
         xdg-utils \
@@ -37,6 +35,6 @@ services:
     startCommand: npm start
     envVars:
       - key: PUPPETEER_EXECUTABLE_PATH
-        value: /usr/bin/chromium-browser
+        value: /usr/bin/google-chrome-stable
       - key: NODE_ENV
         value: production 
