--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc --project tsconfig.json",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build && node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -15,7 +15,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/puppeteer-core": "^7.0.4",
+    "@types/puppeteer": "^7.0.4",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
     "cors": "^2.8.5",
@@ -30,7 +30,7 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
     "pdf.js-extract": "^0.2.1",
-    "puppeteer-core": "^21.0.0",
+    "puppeteer": "^21.5.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
