--- a/render.yaml
+++ b/render.yaml
@@ -3,38 +3,31 @@ services:
     name: puppet
     env: node
     buildCommand: |
-      # Add Google Chrome repository and install Chrome
-      apt-get update
-      apt-get install -y wget gnupg
-      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
+      # Install only the essential dependencies for Chrome
       apt-get update
       apt-get install -y \
-        google-chrome-stable \
-        fonts-liberation \
         libasound2 \
         libatk-bridge2.0-0 \
         libatk1.0-0 \
-        libatspi2.0-0 \
         libcups2 \
         libdbus-1-3 \
-        libdrm2 \
-        libgbm1 \
-        libgtk-3-0 \
+        libgdk-pixbuf2.0-0 \
         libnspr4 \
         libnss3 \
-        libx11-xcb1 \
+        libx11-6 \
         libxcomposite1 \
         libxdamage1 \
+        libxext6 \
         libxfixes3 \
         libxrandr2 \
-        xdg-utils \
+        libxss1 \
+        libxtst6 \
         --no-install-recommends
       npm install
       npm run build
     startCommand: npm start
     envVars:
-      - key: PUPPETEER_EXECUTABLE_PATH
-        value: /usr/bin/google-chrome-stable
       - key: NODE_ENV
-        value: production 
+        value: production
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: "false" 
