--- a/render.yaml
+++ b/render.yaml
@@ -2,32 +2,10 @@ services:
   - type: web
     name: puppet
     env: node
-    buildCommand: |
-      # Install only the essential dependencies for Chrome
-      apt-get update
-      apt-get install -y \
-        libasound2 \
-        libatk-bridge2.0-0 \
-        libatk1.0-0 \
-        libcups2 \
-        libdbus-1-3 \
-        libgdk-pixbuf2.0-0 \
-        libnspr4 \
-        libnss3 \
-        libx11-6 \
-        libxcomposite1 \
-        libxdamage1 \
-        libxext6 \
-        libxfixes3 \
-        libxrandr2 \
-        libxss1 \
-        libxtst6 \
-        --no-install-recommends
-      npm install
-      npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: "false" 
+      - key: BROWSERLESS_API_KEY
+        sync: false 
