--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc --project tsconfig.json",
-    "postinstall": "npm run build"
+    "build": "tsc --project tsconfig.json"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -15,12 +14,11 @@
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/puppeteer-core": "^7.0.4",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "groq-sdk": "^0.26.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
@@ -30,7 +28,6 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
     "pdf.js-extract": "^0.2.1",
-    "puppeteer-core": "^21.5.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
