--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,9 @@ services:
     env: node
     rootDir: backend
     buildCommand: |
-      npm install
+      npm ci
       npm run build
-    startCommand: npm start
+    startCommand: node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -30,7 +30,7 @@ services:
     env: node
     rootDir: frontend
     buildCommand: |
-      npm install
+      npm ci
       npm run build
     startCommand: npm run preview
     envVars:
