--- a/scraping-worker/wrangler.toml
+++ b/scraping-worker/wrangler.toml
@@ -3,4 +3,4 @@ main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
 [vars]
-ALLOWED_ORIGINS = "https://your-frontend-domain.com" 
+ALLOWED_ORIGINS = "https://tailorio.onrender.com/" 
