Update deployment configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,12 @@
   "description": "Backend for Puppet application",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node index.js",
     "dev": "nodemon src/index.ts",
-    "build": "rimraf dist && tsc -p tsconfig.json",
-    "postbuild": "copyfiles -u 1 src/**/*.json dist/"
+    "build": "tsc",
+    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || :"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/passport": "^1.0.17",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
     "cors": "^2.8.5",
@@ -28,19 +23,22 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
-    "pdf.js-extract": "^0.2.1",
-    "typescript": "^5.3.3"
+    "pdf.js-extract": "^0.2.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pdf-parse": "^1.1.5",
-    "copyfiles": "^2.4.1",
     "nodemon": "^3.0.2",
-    "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
