--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,10 @@ services:
     buildCommand: |
       npm ci
       npm run build
-    startCommand: node dist/index.js
+      mkdir -p dist
+      cp package*.json dist/
+      cd dist && npm ci --production
+    startCommand: cd dist && node index.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -22,16 +25,14 @@ services:
       - key: FRONTEND_URL
         sync: false
       - key: SCRAPER_WORKER_URL
-        value: "https://sigmasigma.workers.dev"
+        value: "https://linkedin-scraper.sigmasigma.workers.dev"
 
   # Frontend Service
   - type: web
     name: puppet-frontend
     env: node
     rootDir: frontend
-    buildCommand: |
-      npm ci
-      npm run build
+    buildCommand: npm ci && npm run build
     startCommand: npm run preview
     envVars:
       - key: VITE_GROQ_API_KEY
