--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,28 @@
 services:
-  # Backend Service
+  # Combined Service
   - type: web
-    name: puppet-backend
+    name: puppet-app
     env: node
-    rootDir: backend
     buildCommand: |
+      # Install and build backend
+      cd backend
       npm ci
       npm run build
       mkdir -p dist
       cp package*.json dist/
       cd dist && npm ci --production
-    startCommand: cd dist && node index.js
+      cd ../..
+
+      # Install and build frontend
+      cd frontend
+      npm ci
+      npm run build
+      cd ..
+    startCommand: |
+      cd backend/dist && node index.js &
+      cd frontend && npm run preview
     envVars:
+      # Backend Environment Variables
       - key: NODE_ENV
         value: production
       - key: GROQ_API_KEY
@@ -23,19 +34,11 @@ services:
       - key: MONGODB_URI
         sync: false
       - key: FRONTEND_URL
-        sync: false
+        value: "https://puppet-app.onrender.com"
       - key: SCRAPER_WORKER_URL
         value: "https://linkedin-scraper.sigmasigma.workers.dev"
-
-  # Frontend Service
-  - type: web
-    name: puppet-frontend
-    env: node
-    rootDir: frontend
-    buildCommand: npm ci && npm run build
-    startCommand: npm run preview
-    envVars:
+      # Frontend Environment Variables
       - key: VITE_GROQ_API_KEY
         sync: false
       - key: VITE_API_URL
-        sync: false 
+        value: "https://puppet-app.onrender.com/api" 
