--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,13 @@
   "name": "puppet-backend",
   "version": "1.0.0",
   "description": "Backend for Puppet application",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || :"
+    "build": "tsc && cp package*.json dist/",
+    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || : && node scripts/verify-build.js",
+    "verify": "node scripts/verify-build.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
