--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,6 @@ services:
       cd backend
       npm ci
       npm run build
-      mkdir -p dist
-      cp package*.json dist/
       cd dist && npm ci --production
       cd ../..
 
@@ -19,12 +17,14 @@ services:
       npm run build
       cd ..
     startCommand: |
-      cd backend/dist && node index.js &
+      cd backend/dist && NODE_ENV=production node index.js &
       cd frontend && npm run preview
     envVars:
       # Backend Environment Variables
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: "3001"
       - key: GROQ_API_KEY
         sync: false
       - key: JWT_SECRET
