--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || : && node scripts/verify-build.js",
+    "build": "tsc && npm run postbuild",
+    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || :",
     "verify": "node scripts/verify-build.js"
   },
   "dependencies": {
