--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc && npm run postbuild",
-    "postbuild": "cp -r src/config/*.json dist/config/ 2>/dev/null || :",
+    "build": "tsc --project tsconfig.json",
+    "postinstall": "npm run build && node node_modules/puppeteer/install.js",
     "verify": "node scripts/verify-build.js"
   },
   "dependencies": {
